[tool.poetry]
name = "defs"
version = "0.1.0"
description = ""
authors = ["rrluthi <rrluthi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
typer = {extras = ["all"], version = "^0.9.0"}
art = "^6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
